--- a/style.css
+++ b/style.css
@@ -1,11 +1,63 @@
-/* This is a CSS comment.*/
-
-
 /*
-Comments are only to help PEOPLE read a code file. The
-computer ignores them.
+    rmk1) the asterisk (known as * css Selector_
+    https://www.w3schools.com/cssref/sel_all.asp) in fornt of the css 
+    declaration means that the declared applys to all elements from some class
+    i.e <div>;
 */
 
-.description {
-    color:red;
+* {
+    outline: 1px solid red !important;
 }
+
+/*  
+    this prefixes are broswer specific in case of some functionality still not
+    available
+*/
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.title {
+    background-color: #33BEBE;
+    color: white;
+    height: 120px;
+    font-family: Arial;
+    font-size: 40px;
+    font-weight: 500;
+    text-shadow: 3px 2px white;
+    margin-bottom: 20px;
+    text-indent: 20px;
+    line-height: 180px;
+    border-radius: 20px;
+    
+}
+
+.app {
+    display: -webkit-flex;
+    display: flex;
+}
+
+/*
+    by setting the width and height of the screenshot class, the sizing will
+    be automatically adjust to the informed percentage to fit the screen
+    accordingly.
+*/
+
+.image {
+    max-width: 460px;    
+}
+
+img {
+    border-radius: 50%;
+}
+
+.description {
+    color:#7C8B88;
+    max-width: 705px;
+    margin-left: 40px;
+    font-family:Arial;
+}  
